fixed save and clear button, added refresh check

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="input-group">
             <span class="input-group-text hour">09:00 am </span>
           <textarea class="form" aria-label="With textarea" id="9"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="nin"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="nine"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -46,7 +46,7 @@
             <span class="input-group-text hour">10:00 am </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="10"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="te"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="ten"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -57,7 +57,7 @@
             <span class="input-group-text hour">11:00 am </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="11"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="eleve"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="eleven"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -68,7 +68,7 @@
             <span class="input-group-text hour">12:00 pm </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="12"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="twelv"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="twelve"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -79,7 +79,7 @@
             <span class="input-group-text hour">01:00 pm </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="1"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="on"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="one"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -90,7 +90,7 @@
             <span class="input-group-text hour">02:00 pm </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="2"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="tw"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="two"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -101,7 +101,7 @@
             <span class="input-group-text hour">03:00 pm </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="3"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="thre"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="three"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -112,7 +112,7 @@
             <span class="input-group-text hour">04:00 pm </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="4"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="fou"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="four"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -123,7 +123,7 @@
             <span class="input-group-text hour">05:00 pm </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="5"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="fiv"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="five"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -134,7 +134,7 @@
             <span class="input-group-text hour">06:00 pm </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="6"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="si"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="six"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
@@ -145,7 +145,7 @@
             <span class="input-group-text hour">07:00 pm </span>
           </div>
           <textarea class="form" aria-label="With textarea" id="7"></textarea>
-          <button type="button" class="saveBtn"><i class="fas fa-cloud-upload-alt"></i></button>
+          <button type="button" class="saveBtn" id="seve"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="seven"><i class="fas fa-eraser"></i></button>
         </div>
       </div>
