functioning colors and simplified js

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
 
       <!-- Timeblocks go here -->
-      <div class="row">
+      <div class="row" id="r">
         <div class="input-group">
             <span class="input-group-text hour">09:00 am </span>
           <textarea class="form" aria-label="With textarea" id="9"></textarea>
