--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <div class="row" id="r">
         <div class="input-group">
             <span class="input-group-text hour">09:00 am </span>
-          <textarea class="form" aria-label="With textarea" id="9"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="9"></textarea>
           <button type="button" class="saveBtn" id="nin"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="nine"><i class="fas fa-eraser"></i></button>
         </div>
@@ -45,7 +45,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">10:00 am </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="10"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="10"></textarea>
           <button type="button" class="saveBtn" id="te"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="ten"><i class="fas fa-eraser"></i></button>
         </div>
@@ -56,7 +56,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">11:00 am </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="11"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="11"></textarea>
           <button type="button" class="saveBtn" id="eleve"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="eleven"><i class="fas fa-eraser"></i></button>
         </div>
@@ -67,7 +67,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">12:00 pm </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="12"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="12"></textarea>
           <button type="button" class="saveBtn" id="twelv"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="twelve"><i class="fas fa-eraser"></i></button>
         </div>
@@ -78,7 +78,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">01:00 pm </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="1"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="1"></textarea>
           <button type="button" class="saveBtn" id="on"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="one"><i class="fas fa-eraser"></i></button>
         </div>
@@ -89,7 +89,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">02:00 pm </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="2"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="2"></textarea>
           <button type="button" class="saveBtn" id="tw"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="two"><i class="fas fa-eraser"></i></button>
         </div>
@@ -100,7 +100,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">03:00 pm </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="3"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="3"></textarea>
           <button type="button" class="saveBtn" id="thre"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="three"><i class="fas fa-eraser"></i></button>
         </div>
@@ -111,7 +111,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">04:00 pm </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="4"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="4"></textarea>
           <button type="button" class="saveBtn" id="fou"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="four"><i class="fas fa-eraser"></i></button>
         </div>
@@ -122,7 +122,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">05:00 pm </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="5"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="5"></textarea>
           <button type="button" class="saveBtn" id="fiv"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="five"><i class="fas fa-eraser"></i></button>
         </div>
@@ -133,7 +133,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">06:00 pm </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="6"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="6"></textarea>
           <button type="button" class="saveBtn" id="si"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="six"><i class="fas fa-eraser"></i></button>
         </div>
@@ -144,7 +144,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text hour">07:00 pm </span>
           </div>
-          <textarea class="form" aria-label="With textarea" id="7"></textarea>
+          <textarea class="form-control" aria-label="With textarea" id="7"></textarea>
           <button type="button" class="saveBtn" id="seve"><i class="fas fa-cloud-upload-alt"></i></button>
           <button type="button" class="clearBtn" id="seven"><i class="fas fa-eraser"></i></button>
         </div>
